--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home": "http://sandeep-vEngageAi.github.io/ReactPortfolio",
+  "homepage": "http://sandeep-vEngageAi.github.io/ReactPortfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
